Delete tests; Remove unused XPath imports;