@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.gmu.cs</groupId>
-    <artifactId>ecj</artifactId>
+    <artifactId>ecj_cgp</artifactId>
     <version>27</version>
     <packaging>jar</packaging>
 
-    <profiles>
+<!--    <profiles>
       <profile>
-	<!-- The default profile excludes the SystemTest suite (becaue
-	     it's expensive). -->
+	&lt;!&ndash; The default profile excludes the SystemTest suite (becaue
+	     it's expensive). &ndash;&gt;
 	<id>UnitTests</id>
 	<activation>
 	  <activeByDefault>true</activeByDefault>
@@ -20,11 +20,11 @@
       </profile>
 	  
       <profile>
-	<!-- This profile executes the SystemTest suite, but not the
-	     other tests. -->
+	&lt;!&ndash; This profile executes the SystemTest suite, but not the
+	     other tests. &ndash;&gt;
 	<id>SystemTests</id>
 	<properties>
-	  <!-- No test groups are excluded. -->
+	  &lt;!&ndash; No test groups are excluded. &ndash;&gt;
 	  <tests.excludedGroups></tests.excludedGroups>
 	</properties>
 	<build>
@@ -34,15 +34,16 @@
 	      <artifactId>maven-surefire-plugin</artifactId>
 	      <version>2.12.4</version>
 	      <configuration>
-		<!-- We only run the SystemTest group (and no other
-		     tests). -->
+			  <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
+		&lt;!&ndash; We only run the SystemTest group (and no other
+		     tests). &ndash;&gt;
 		<groups>ec.test.SystemTest</groups>
 	      </configuration>
 	    </plugin>
 	  </plugins>
 	</build>
       </profile>
-    </profiles>
+    </profiles>-->
 
     <repositories>
       <repository>
@@ -131,21 +132,22 @@
 	</plugin>
 
 	<!--Exclude expensive tests from default test suite. -->
-	<plugin>
+<!--	<plugin>
 	  <groupId>org.apache.maven.plugins</groupId>
 	  <artifactId>maven-surefire-plugin</artifactId>
 	  <version>2.12.4</version>
 	  <configuration>
+		  <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
 	    <excludedGroups>${tests.excludedGroups}</excludedGroups>
 	    <excludes>
-	      <!-- XXX Temporary exclusion of failing tests -->
+	      &lt;!&ndash; XXX Temporary exclusion of failing tests &ndash;&gt;
 	      <exclude>ec/co/ant/*.java</exclude>
 	    </excludes>
 	  </configuration>
-	</plugin>
+	</plugin>-->
 	
 	<!--Measure code coverage of tests with JaCoCo. -->
-	<plugin>
+<!--	<plugin>
 	  <groupId>org.jacoco</groupId>
 	  <artifactId>jacoco-maven-plugin</artifactId>
 	  <version>0.8.5</version>
@@ -170,15 +172,15 @@
 	      </goals>
 	      <configuration>
 		<rules>
-		  <!--  implementation is needed only for Maven 2  -->
+		  &lt;!&ndash;  implementation is needed only for Maven 2  &ndash;&gt;
 		  <rule>
 		    <element>BUNDLE</element>
 		    <limits>
-		      <!--  implementation is needed only for Maven 2  -->
+		      &lt;!&ndash;  implementation is needed only for Maven 2  &ndash;&gt;
 		      <limit>
 			<counter>COMPLEXITY</counter>
 			<value>COVEREDRATIO</value>
-			<!--<minimum>0.60</minimum>-->
+			&lt;!&ndash;<minimum>0.60</minimum>&ndash;&gt;
 		      </limit>
 		    </limits>
 		  </rule>
@@ -186,8 +188,8 @@
 	      </configuration>
 	    </execution>
 	  </executions>
-	</plugin>
-		  <plugin>
+	</plugin>-->
+<!--		  <plugin>
 		    <groupId>org.apache.maven.plugins</groupId>
 		    <artifactId>maven-javadoc-plugin</artifactId>
 		    <version>3.1.1</version>
@@ -204,7 +206,7 @@
 			<phase>package</phase>
 		      </execution>
 		    </executions>
-		  </plugin>
+		  </plugin>-->
       </plugins>
     </build>
 </project>
